--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,11 @@ name = "rust"
 # crate-type = ["cdylib", "rlib"]
 crate-type = ["cdylib"]
 
+[dependencies]
+reqwest = { version = "0.11", features = ["blocking"] }
+tokio = { version = "1", features = ["full"] }
+bytes = "1.5.0"
+
 [dependencies.pyo3]
 version = "0.15.0"
 features = ["extension-module"]
